[package]
name = "photo-uploader"
version = "0.1.0"
authors = ["Mike Engel <mike@mike-engel.com>"]
edition = "2018"

[dependencies]
clap = "2"
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.5"
ring = "0.14"
dirs = "2"
toml = "0.5"
regex = "1"
heck = "0.3"
